# wasi-http

./: .bazelrc  .gitignore  BUILD  Cargo.toml  MODULE.bazel  Makefile  README.md  build-and-run.sh  example.cc  prepare.sh  test.cc
bazel/: BUILD  toolchain.bzl  wasi-cli.bazel  wasi-clocks.bazel  wasi-filesystem.bazel  wasi-http.bazel  wasi-io.bazel  wasi-random.bazel  wasi-sdk.bazel  wasi-sockets.bazel  wit-bindgen-cli.bazel  wit.bzl
cabi-realloc/: BUILD
proxy/: BUILD  alloc.rs  guest.rs  host.rs  lib.rs  types.rs
proxy-wasm-cpp-sdk/: BUILD  README.md  imported-functions.txt  proxy_wasm_intrinsics.cc  proxy_wasm_intrinsics.h
src/: Makefile  bindings.rs  handle.c  lib.rs  target.c  target.h
tools/: BUILD  wit-package.py
wit/: deps.toml  world.wit
